testdata/zkc/invalid/basic_13.zkc
//error:3:13-14:expected type u16
fn test(q:u16) -> (r:u32) {
   r = (q + 1) * 2
}
